--- a/predictor_template.ui
+++ b/predictor_template.ui
@@ -41,10 +41,10 @@
    <widget class="QPushButton" name="ButtonPredict">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>400</y>
+      <x>630</x>
+      <y>120</y>
       <width>161</width>
-      <height>81</height>
+      <height>61</height>
      </rect>
     </property>
     <property name="text">
@@ -69,7 +69,7 @@
        <x>9</x>
        <y>20</y>
        <width>571</width>
-       <height>111</height>
+       <height>121</height>
       </rect>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout">
@@ -78,7 +78,7 @@
         <item>
          <widget class="QLabel" name="labelPredEndDate">
           <property name="text">
-           <string>Plot Prediction to Date:</string>
+           <string>Plot End Date:</string>
           </property>
          </widget>
         </item>
@@ -92,19 +92,36 @@
         <item>
          <widget class="QLabel" name="labelPredSpecDate">
           <property name="text">
-           <string>Predict Value at Date:</string>
+           <string>Value at Date:</string>
           </property>
          </widget>
         </item>
        </layout>
       </item>
       <item>
-       <layout class="QVBoxLayout" name="verticalLayout_2">
+       <layout class="QVBoxLayout" name="verticalLayout_5">
         <item>
-         <widget class="QLineEdit" name="lineInputDataFile"/>
+         <widget class="QDateEdit" name="datePredictEnd"/>
         </item>
         <item>
+         <widget class="QPushButton" name="pushButtonInputFile">
+          <property name="text">
+           <string>Select File</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QDateEdit" name="datePredictSpec"/>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QVBoxLayout" name="verticalLayout_2">
+        <item>
          <widget class="QLineEdit" name="linePredEndDate"/>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="lineInputDataFile"/>
         </item>
         <item>
          <widget class="QLineEdit" name="linePredSpecDate"/>
@@ -120,7 +137,7 @@
       <x>10</x>
       <y>200</y>
       <width>351</width>
-      <height>131</height>
+      <height>291</height>
      </rect>
     </property>
     <property name="title">
@@ -132,7 +149,7 @@
        <x>10</x>
        <y>20</y>
        <width>331</width>
-       <height>101</height>
+       <height>261</height>
       </rect>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -153,7 +170,7 @@
       <item>
        <widget class="QCheckBox" name="checkSavePlotToFile">
         <property name="text">
-         <string>Save Plot to File</string>
+         <string>Save Plot to PDF</string>
         </property>
        </widget>
       </item>
@@ -171,14 +188,17 @@
         </item>
        </layout>
       </item>
+      <item>
+       <widget class="QTextBrowser" name="textBrowserOutput"/>
+      </item>
      </layout>
     </widget>
    </widget>
    <widget class="QGroupBox" name="groupBox_2">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>340</y>
+      <x>610</x>
+      <y>60</y>
       <width>211</width>
       <height>51</height>
      </rect>
